[package]
name = "scaling-spoon"
version = "0.1.0"
authors = ["kouki <kouki@localhost>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"

[dependencies.reqwest]
version = "0.11.3"
features = ["blocking", "cookies"]
